--- a/src/newtab/newtab.html
+++ b/src/newtab/newtab.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
+  <title>new patterns</title>
   <link rel="stylesheet" href="newtab.css">
 </head>
 <body>
